Fixed footer on mobile

--- a/sites/all/themes/dc_finland/css/dc-finland-alpha-default-narrow.css.less
+++ b/sites/all/themes/dc_finland/css/dc-finland-alpha-default-narrow.css.less
@@ -133,3 +133,10 @@ section#section-content {
   }
 }
 
+footer.section-footer {
+  .region-footer-first {
+    .group-1, .group-2, .group-3, .group-4 {
+      width: 47%;
+    }
+  }
+}
