--- a/sites/all/themes/dc_finland/css/footer.less
+++ b/sites/all/themes/dc_finland/css/footer.less
@@ -32,11 +32,14 @@ footer.section-footer {
       margin-bottom: 30px;
     }
 
+    .group-1, .group-2, .group-3, .group-4 {
+      width: 100%;
+    }
+
     .group-1 {
       display: inline-block;
       vertical-align: top;
       margin: 0 1% 0;
-      width: 47%;
 
       h3 {
         a {
@@ -59,7 +62,6 @@ footer.section-footer {
       display: inline-block;
       vertical-align: top;
       margin: 0 1% 0;
-      width: 47%;
       h3 {
         a {
           .blue-button(#00b2f4);
@@ -79,7 +81,6 @@ footer.section-footer {
     .group-3, .group-4 {
       display: inline-block;
       vertical-align: top;
-      width: 47%;
       margin: 0 1% 0;
       h3 {
         a {
